other/add-labels/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-labels
policies:
- ../add-labels.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: add-labels
  resources:
  - default/myapp-pod
  result: pass
  rule: add-labels
- kind: Service
  patchedResources: patchedResource1.yaml
  policy: add-labels
  resources:
  - default/my-service
  result: pass
  rule: add-labels
